--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.22.5",
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
     "body-parser": "^1.20.2",
     "clean-webpack-plugin": "^4.0.0",
@@ -31,7 +32,7 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^2.0.22",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
